--- a/About.html
+++ b/About.html
@@ -84,7 +84,7 @@
 		<span class="hamburger" id="hamburgerMenu"><i class="fa-solid fa-bars"></i></span>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html" class="active">About Me</a>
+            <a href="About.html" class="active">About Me</a>
             <a href="skills.html">Skills</a>
             <a href="achievements.html">Achievements</a>
             <a href="#">Resume</a>
