--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <nav>
             <a href="index.html" class="active"> Home</a>
-            <a href="about.html">About Me</a>
+            <a href="About.html">About Me</a>
             <a href="skills.html">Skills</a>
             <a href="achievements.html">Achievements</a>
             <a href="#">Resume</a>
