--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             My journey in the tech world has equipped me with a diverse skill set and a problem-solving mindset.<br>
             I invite you to explore my portfolio and discover the projects that showcase my commitment to excellence and innovation.<br>
             I look forward to potential opportunities to collaborate and make a difference together.</p>
-            <a href="projects.html" class="btn">PROJECTS</a>
+            <a href="Projects.html" class="btn">PROJECTS</a>
 
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/om-kasodariya-46642a266/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
