--- a/Projects.html
+++ b/Projects.html
@@ -69,11 +69,13 @@
     </br></br></br></br><h1>My Projects</h1></br></br>
     
     <div class="projects-container">
-        <a href="#" class="project-btn">HTML</a>
+        <a href="calculator.html" class="project-btn">HTML</a>
         <a href="#" class="project-btn">Java</a>
-        <a href="#" class="project-btn">Python</a>
+        <a href="#" class="project-btn">JS</a>
         <a href="#" class="project-btn">PHP</a>
         <a href="#" class="project-btn">.Net</a>
+		<a href="#" class="project-btn">Python</a>
+
     </div>
 
     <!-- Back button -->
