--- a/About.html
+++ b/About.html
@@ -115,9 +115,9 @@
     <script>
         const codeLines = [
             "// Initializing Profile...",
-            "let name = \"OM PATEL\";",
-            "let role = \"Software Developer\";",
-            "let skills = [\"Java\", \"HTML\", \"PHP\", \".Net\", \"Python\"];",
+            "Name = \"OM PATEL\";",
+            "Role = \"Software Developer\";",
+            "Skills = [\"Java\", \"HTML\", \"PHP\", \".Net\", \"Python\"];",
             "console.log(\"WELCOME TO MY WORLD\");",
             "// Profile Ready..."
         ];
