--- a/Projects.html
+++ b/Projects.html
@@ -69,7 +69,7 @@
     </br></br></br></br><h1>My Projects</h1></br></br>
     
     <div class="projects-container">
-        <a href="calculator.html" class="project-btn">HTML</a>
+        <a href="HTMLPROJECTS.html" class="project-btn">HTML</a>
         <a href="#" class="project-btn">Java</a>
         <a href="#" class="project-btn">JS</a>
         <a href="#" class="project-btn">PHP</a>
